juego pinpon terminado

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </div>
 
 
-    <script src="js/index.js"></script>
-    <script src="js/jugador.js"></script>
-    <script src="js/pelota.js"></script>
+    <script src="js/index.js" type="module"></script>
+    <script src="js/jugador.js" type="module"></script>
+    <script src="js/pelota.js" type="module"></script>
 </body>
 </html>
